--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -5,14 +5,21 @@
 }
 .todoList__item {
   width: 200px;
-  border: 2px solid rgb(1, 7, 1);
+  border: 1px solid burlywood;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: bisque;
+  border-radius: 10%;
+  gap: 20px;
+}
+
+.todoList__text {
+  display: flex;
+  margin: 0;
 }
 
 .todoList__button {
   background-color: bisque;
-  border: 1px solid blackl;
+  border: 1px solid burlywood;
 }
